--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,38 +1,27 @@
 <resources>
-    <string name="app_name">Electronic diary</string>
+    <string name="app_name">Электронный дневник</string>
     <!-- Strings related to login -->
-    <string name="prompt_login">Login</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome "</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-
-    <string name="menu_profile">Profile</string>
-    <string name="menu_search">Search</string>
-    <string name="menu_preferences">Settings</string>
-
-    <!-- Preference Titles -->
+    <string name="prompt_login">Логин</string>
+    <string name="prompt_password">Пароль</string>
+    <string name="action_sign_in">Войти</string>
+    <string name="welcome">Добро пожаловать, </string>
+    <string name="invalid_username">Неверный логин</string>
+    <string name="invalid_password">Пароль должен содежать >5 символов</string>
+    <string name="login_failed">Вход не выполнен</string>
+    <!-- Strings related to navigation -->
+    <string name="nav_header_title">Пользователь</string>
+    <string name="nav_header_subtitle">почта.пользователя@gmail.com</string>
+    <!-- Strings related to menu -->
+    <string name="menu_profile">Профиль</string>
+    <string name="menu_search">Поиск</string>
+    <string name="menu_preferences">Настройки</string>
+    <!-- Strings related to preferences -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
     <string name="signature_title">Your signature</string>
     <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
     <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
