--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="prompt_login">Логин</string>
     <string name="prompt_password">Пароль</string>
     <string name="action_sign_in">Войти</string>
+    <string name="is_remember_me">Запомнить меня при входе</string>
     <string name="welcome">Добро пожаловать, </string>
     <string name="invalid_username">Неверный логин</string>
     <string name="invalid_password">Пароль должен содежать >5 символов</string>
@@ -15,13 +16,7 @@
     <string name="menu_profile">Профиль</string>
     <string name="menu_search">Поиск</string>
     <string name="menu_preferences">Настройки</string>
+    <string name="menu_logout">Выйти</string>
     <!-- Strings related to preferences -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="general_header">Общие</string>
 </resources>
