--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,13 +8,13 @@
     <string name="invalid_username">Неверный логин</string>
     <string name="invalid_password">Пароль должен содежать >5 символов</string>
     <string name="login_failed">Вход не выполнен</string>
-    <!-- Strings related to navigation -->
+    <!-- Strings related to menu and navigation -->
     <string name="nav_header_title">Пользователь</string>
     <string name="nav_header_subtitle">почта.пользователя@gmail.com</string>
-    <!-- Strings related to menu -->
-    <string name="menu_profile">Профиль</string>
-    <string name="menu_search">Поиск</string>
+    <string name="menu_profile">Мой Профиль</string>
+    <string name="menu_search">Поиск студента</string>
     <string name="menu_settings">Настройки</string>
+    <string name="menu_group_performance">Успеваемость группы</string>
     <string name="menu_logout">Выйти</string>
     <!-- Strings related to preferences -->
     <string name="general_header">Общие</string>
@@ -22,5 +22,5 @@
     <string name="is_admin_rules">Права админа</string>
     <string name="semester_choose">Выберите семестер</string>
     <!-- Strings related to search -->
-    <string name="search_hint">Поиск студентов…</string>
+    <string name="search_hint">Поиск студента…</string>
 </resources>
