--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="login_failed">Вход не выполнен</string>
     <!-- Strings related to menu and navigation -->
     <string name="menu_profile">Мой Профиль</string>
-    <string name="menu_search">Поиск студента</string>
+    <string name="menu_search_students">Поиск студента</string>
+    <string name="menu_search_groups">Поиск группы</string>
     <string name="menu_settings">Настройки</string>
     <string name="menu_group_performance">Успеваемость группы</string>
     <string name="menu_student_profile">Профиль студента</string>
@@ -23,8 +24,20 @@
     <string name="semester_choose">Выберите семестер</string>
     <string name="event_min_points_text">Мин. баллов</string>
     <!-- Strings related to search -->
-    <string name="search_hint">Поиск студента…</string>
-    <!--    &lt;!&ndash; Strings related to admin actions &ndash;&gt;
-        <string name="add_subject_button">Добавить предмет</string>
-        <string name="add_group_button">Добавить группу</string>-->
+    <string name="student_search_hint">Поиск студента…</string>
+    <string name="group_search_hint">Поиск группы…</string>
+    <!-- Strings related to admin actions -->
+    <string name="admin_actions">Действия админа</string>
+    <string name="name_adding_form">Имя</string>
+    <string name="second_name_adding_form">Фамилия</string>
+    <string name="login_adding_form">Логин</string>
+    <string name="password_adding_form">Пароль</string>
+    <string name="adding_login_and_password_generate">Сгенерировать логин и пароль</string>
+    <string name="group_title_adding_form">Группа</string>
+    <string name="subject_title_adding_form">Предмет</string>
+    <string name="semester_year_adding_form">Год</string>
+    <string name="semester_half_adding_form">Первая половина года</string>
+    <!-- Strings related to professor actions -->
+    <string name="add_subject_button">Добавить предмет</string>
+    <string name="add_group_button">Добавить группу</string>
 </resources>
