--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Электронный дневник</string>
+    <string name="app_name">Электронный журнал</string>
     <!-- Strings related to login -->
     <string name="action_sign_in">Войти</string>
     <string name="welcome">Добро пожаловать, </string>
@@ -73,8 +73,8 @@
     <!-- Strings related to form valid -->
     <string name="invalid_empty_field">Пустое поле</string>
     <string name="invalid_username">Неверный логин</string>
-    <string name="invalid_date_field">Формат даты dd.mm.yyyy</string>
-    <string name="invalid_date_time_field">Формат времени dd.mm.yyyy mm:hh</string>
+    <string name="invalid_date_field">Формат даты dd.MM.yyyy</string>
+    <string name="invalid_date_time_field">Формат времени dd.MM.yyyy hh:mm</string>
     <string name="invalid_password">Пароль должен содежать >5 символов</string>
     <string name="invalid_group_title">Группа должна содежать >4 символов</string>
     <string name="invalid_semester_year">Год должен содержать =4 символа</string>
